K8S/mssql-plat-depl.yaml
# Deployment of SQL server
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mssql-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mssql
    template:
        metadata:
            labels:
                app: mssql
        spec:
            containers:
                - name: mssql
                  image: mcr.microsoft.com/mssql/server:2017-latest
                  ports:
                    - containerPort: 1433
                  volumeMounts:
                  - mountPath: /var/opt/mssql/data
                    name: mssqldb
            volumes:
            - name: mssqldb
              persistentVolumeClaim:
                claimName: mssql-claim
---
#Cluster IP
apiVersion: v1
kind: Service
metadata: 
  name: mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
  - name: mssql
    protocol: TCP
    port: 1433
    targetPort: 1433
---
#Load Balancer
apiVersion: v1
kind: Service
metadata: 
  name: mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
