K8S/platforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformmnpservice-srv
spec:
  type: NodePort
  selector: 
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
